--- a/action.yml
+++ b/action.yml
@@ -44,4 +44,4 @@ runs:
 
     - name: Upload image to registry
       shell: bash
-      run: docker push ${{ steps.image_url.outputs.value }}
+      run: docker push -a ${{ steps.image_url.outputs.value }}
