--- a/action.yml
+++ b/action.yml
@@ -20,6 +20,10 @@ inputs:
     description: The docker build context (usually '.')
     required: false
     default: '.'
+  build_args:
+    description: Build arguments to pass to the Docker build command
+    required: false
+    default: ''
 
 outputs:
   image_url:
@@ -52,6 +56,7 @@ runs:
         -f ${{ inputs.dockerfile }}
         -t ${{ steps.image_tags.outputs.sha }}
         -t ${{ steps.image_tags.outputs.latest }}
+        ${{ inputs.build_args }}
 
     - name: Login to registry
       shell: bash
